fixtures/phase5/errors/warning-continuation-known-gap.php
<?php
// phase5-runtime: category=errors expect=known_gap known_gap=E_PHP_RUNTIME_UNDEFINED_VARIABLE_WARNING
echo $missing;
echo "after\n";
